--- a/01- HTML/04- HTML Structure/code/index.html
+++ b/01- HTML/04- HTML Structure/code/index.html
@@ -29,7 +29,7 @@
 
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
-      <h2>Breaking News</h2>
+      <h2>Learning and Constructing</h2>
     </section>
   </body>
 </html>
