--- a/02- CSS/01- Introduction/code/index.html
+++ b/02- CSS/01- Introduction/code/index.html
@@ -29,6 +29,7 @@
 
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
+      <p>I'm learning to code!</p>
     </section>
   </body>
 </html>
