--- a/02- CSS/09- Like IMDb/code/index.html
+++ b/02- CSS/09- Like IMDb/code/index.html
@@ -46,7 +46,7 @@
               <span>8.8</span>
               <i class="fa fa-star"></i>
             </div>
-            <p class="media-title">Forest Gump</p>
+            <p class="media-title">Forrest Gump</p>
             <button class="media-actions">
               <i class="fa fa-plus"></i>
               <span>Watchlist</span>
