--- a/02- CSS/10- Pseudo-Classes/code/index.html
+++ b/02- CSS/10- Pseudo-Classes/code/index.html
@@ -25,6 +25,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <main>
@@ -35,30 +37,6 @@
       <h2 id="playground-title">Playground</h2>
       <form action="" method="post">
         <h4>Select your favourite programming language(s):</h4>
-
-        <input type="checkbox" id="c" name="C" value="C" />
-        <label for="c">
-          <span>C</span> 
-          <span><i class="fa fa-heart"></i></span>
-        </label>
-
-        <input type="checkbox" id="php" name="PHP" value="PHP" />
-        <label for="php">
-          <span>PHP</span> 
-          <span><i class="fa fa-heart"></i></span>
-        </label>
-
-        <input type="checkbox" id="python" name="Python" value="Python" />
-        <label for="python">
-          <span>Python</span> 
-          <span><i class="fa fa-heart"></i></span>
-        </label>
-
-        <input type="checkbox" id="golang" name="Golang" value="Golang" />
-        <label for="golang">
-          <span>Golang</span> 
-          <span><i class="fa fa-heart"></i></span>
-        </label>
       </form>
     </section>
   </body>
