CSS Grid: 07- Gallery

--- a/04- CSS Grid/07- Gallery/code/index.html
+++ b/04- CSS Grid/07- Gallery/code/index.html
@@ -21,41 +21,13 @@
       media="screen and (max-width: 425px)"
       href="./style/mobile.css"
     />
+
+    <script src="./index.js" defer></script>
   </head>
 
   <body>
     <main>
-      <div class="wrapper">
-        <div>
-          <img src="./assets/images/Portraits/1.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-
-        <div>
-          <img src="./assets/images/Portraits/2.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-
-        <div>
-          <img src="./assets/images/Portraits/3.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-
-        <div>
-          <img src="./assets/images/Portraits/4.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-
-        <div>
-          <img src="./assets/images/Portraits/5.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-
-        <div>
-          <img src="./assets/images/Portraits/6.jpg" alt="Portrait" />
-          <span class="title">HOSCOS</span>
-        </div>
-      </div>
+      <div class="wrapper"></div>
     </main>
   </body>
 </html>
