CSS Grid: 15- Layout Edition

--- a/04- CSS Grid/15- Layout/code/index.html
+++ b/04- CSS Grid/15- Layout/code/index.html
@@ -31,10 +31,10 @@
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
       <div class="container">
-        <div class="header">HEADER</div>
-        <div class="main">MAIN</div>
-        <div class="aside">ASIDE</div>
-        <div class="footer">FOOTER</div>
+        <div class="header">Header</div>
+        <div class="main">Main</div>
+        <div class="aside">Aside</div>
+        <div class="footer">Footer</div>
       </div>
     </section>
   </body>
