--- a/02- CSS/24- Like Survey Monkey/code/index.html
+++ b/02- CSS/24- Like Survey Monkey/code/index.html
@@ -6,7 +6,7 @@
     <title>Survery Monkey</title>
     <link
       rel="shortcut icon"
-      href="./assets/images/Favicon.png"
+      href="./assets/images/favicon.png"
       type="image/png"
     />
     <link rel="stylesheet" href="./style/main.css" />
