--- a/07- Sass/01/index.html
+++ b/07- Sass/01/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning Sass</title>
+    <link
+      rel="shortcut icon"
+      href="./assets//images/favicon.png"
+      type="image/png"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <link
@@ -19,7 +24,7 @@
   </head>
   <body>
     <main>
-      <h1>Learning Sass</h1>
+      <h1 id="hero-title">Learning Sass</h1>
     </main>
 
     <section id="playground">
