--- a/01- HTML/01- Introduction to HTML/code/index.html
+++ b/01- HTML/01- Introduction to HTML/code/index.html
@@ -9,22 +9,22 @@
       type="image/png"
     />
     <title>Learning HTML✨</title>
-    <link rel="stylesheet" href="/style/main.css" />
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="/style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="/style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning HTML.</h1>
+      <h1 id="hero-title">Learning HTML</h1>
     </main>
 
     <section id="playground">
