--- a/01- HTML/07- Links/code/index.html
+++ b/01- HTML/07- Links/code/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
     <title>Learning HTML✨</title>
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning HTML.</h1>
+      <h1 id="hero-title">Learning HTML</h1>
     </main>
 
     <section id="playground">
