--- a/01- HTML/17- Form Validation/code/index.html
+++ b/01- HTML/17- Form Validation/code/index.html
@@ -5,35 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
     <title>Learning HTML✨</title>
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning HTML.</h1>
+      <h1 id="hero-title">Learning HTML</h1>
     </main>
 
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
 
       <div class="form-wrapper">
-        <img src="./assets/images/Codecademy.png" alt="Codecademy" />
+        <img src="/assets/images/Codecademy.png" alt="Codecademy" />
         <h4>Join the millions learning to code with Codecademy for free</h4>
-        <form action="" method="post">
+        <form>
           <div class="input-wrapper">
             <label for="email">Email</label>
             <br />
