--- a/02- CSS/09- Like IMDb/code/index.html
+++ b/02- CSS/09- Like IMDb/code/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
     <title>Learning CSS✨</title>
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
     <link
       rel="stylesheet"
@@ -28,7 +28,7 @@
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning CSS.</h1>
+      <h1 id="hero-title">Learning CSS</h1>
     </main>
 
     <section id="playground">
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="media-card">
           <div class="media-poster">
-            <img src="./assets/images/Forest_Gump.jpg" alt="Forest Gump" />
+            <img src="/assets/images/Forest_Gump.jpg" alt="Forest Gump" />
             <i class="watchlist-icon fa fa-heart fa-lg"></i>
           </div>
 
