--- a/02- CSS/10- Pseudo-Classes/code/index.html
+++ b/02- CSS/10- Pseudo-Classes/code/index.html
@@ -6,31 +6,31 @@
     <title>Learning CSS ✨</title>
     <link
       rel="shortcut icon"
-      href="./assets/images/Favicon.png"
+      href="/assets/images/Favicon.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <script src="./js/index.js" defer></script>
+    <script src="/scripts/index.js" defer></script>
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning CSS.</h1>
+      <h1 id="hero-title">Learning CSS</h1>
     </main>
 
     <section id="playground">
