--- a/02- CSS/17- Transitions/code/index.html
+++ b/02- CSS/17- Transitions/code/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
     <title>Learning CSS✨</title>
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning CSS.</h1>
+      <h1 id="hero-title">Learning CSS</h1>
     </main>
 
     <section id="playground">
@@ -32,7 +32,7 @@
       <div class="artist-card">
         <div class="artist-img"></div>
         <h5 class="artist-title">
-          <em>Shahla Riahi (Iranian Actress)</em>
+          <strong>Shahla Riahi (Iranian Actress)</strong>
         </h5>
       </div>
     </section>
