--- a/02- CSS/23- Exercise Rolling KFC/code/index.html
+++ b/02- CSS/23- Exercise Rolling KFC/code/index.html
@@ -3,15 +3,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="assets/images/Logo.png" type="image/png" />
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/png" />
     <title>Rolling KFC</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <div class="square">
-      <img src="./assets/images/KFC.png" class="logo" alt="KFC Logo" />
+      <img src="/assets/images/kfc.png" class="logo" alt="KFC Logo" />
     </div>
   </body>
 </html>
