--- a/02- CSS/24- Like Survey Monkey/code/index.html
+++ b/02- CSS/24- Like Survey Monkey/code/index.html
@@ -6,38 +6,36 @@
     <title>Survery Monkey</title>
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
-    <script src="./js/index.js" defer></script>
+    <script src="/scripts/index.js" defer></script>
   </head>
 
   <body>
     <header>
       <div class="img-wrapper">
-        <img src="assets/images/Logo.png" alt="Logo" />
+        <img src="/assets/images/logo.png" alt="Logo" />
       </div>
     </header>
 
     <main>
-      <section id="playground">
-        <form action="" method="post">
-          <h3>What is your desired job type?</h3>
-          <div id="radio-buttons"></div>
-        </form>
-      </section>
+      <form action="" method="post">
+        <h3>What is your desired job type?</h3>
+        <div id="radio-buttons"></div>
+      </form>
     </main>
   </body>
 </html>
