--- a/02- CSS/25- Like Codecademy/code/index.html
+++ b/02- CSS/25- Like Codecademy/code/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
     <title>Codecademy - Learn to code</title>
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
