--- a/02- CSS/26- Animated Border/code/index.html
+++ b/02- CSS/26- Animated Border/code/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Border</title>
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/png" />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/png" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
   </head>
 
   <body>
