--- a/03- CSS Flexbox/07/code/index.html
+++ b/03- CSS Flexbox/07/code/index.html
@@ -6,20 +6,20 @@
     <title>Learning Flexbox ✨</title>
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
+    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
+      href="/styles/tablet.css"
     />
     <link
       rel="stylesheet"
       media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
+      href="/styles/mobile.css"
     />
   </head>
   <body>
