Flexbox: rename folders

--- a/03- CSS Flexbox/05/code/index.html
+++ b/03- CSS Flexbox/05/code/index.html
@@ -34,7 +34,7 @@
         <div class="flex-item">Deux</div>
         <div class="flex-item">Trois</div>
         <div class="flex-item">Quatre</div>
-        <div class="flex-item precedence">Cinq</div>
+        <div class="flex-item">Cinq</div>
       </div>
     </section>
   </body>
