--- a/03- CSS Flexbox/06/code/index.html
+++ b/03- CSS Flexbox/06/code/index.html
@@ -30,11 +30,11 @@
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
       <div class="flex-container">
-        <div class="flex-item first">Un</div>
+        <div class="flex-item">Un</div>
         <div class="flex-item">Deux</div>
-        <div class="flex-item third">Trois</div>
+        <div class="flex-item">Trois</div>
         <div class="flex-item">Quatre</div>
-        <div class="flex-item">Cinq</div>
+        <div class="flex-item precedence">Cinq</div>
       </div>
     </section>
   </body>
