--- a/03- CSS Flexbox/07/code/index.html
+++ b/03- CSS Flexbox/07/code/index.html
@@ -30,7 +30,7 @@
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
       <div class="flex-container">
-        <div class="flex-item">Un</div>
+        <div class="flex-item first">Un</div>
         <div class="flex-item">Deux</div>
         <div class="flex-item third">Trois</div>
         <div class="flex-item">Quatre</div>
