--- a/03- CSS Flexbox/08/code/index.html
+++ b/03- CSS Flexbox/08/code/index.html
@@ -32,7 +32,7 @@
       <div class="flex-container">
         <div class="flex-item">Un</div>
         <div class="flex-item">Deux</div>
-        <div class="flex-item">Trois</div>
+        <div class="flex-item third">Trois</div>
         <div class="flex-item">Quatre</div>
         <div class="flex-item">Cinq</div>
       </div>
