Felxbox: 12- implement main

--- a/03- CSS Flexbox/12- Sample/code/index.html
+++ b/03- CSS Flexbox/12- Sample/code/index.html
@@ -56,14 +56,44 @@
             </div>
           </div>
           <div>
-            <img src="/assets/images/header-img.svg" alt="Header Image" />
+            <img src="/assets/images/header-img.svg" alt="" />
           </div>
         </section>
       </div>
     </header>
+
     <main>
-      <div class="container"></div>
+      <div class="container">
+        <span>How To Work</span>
+        <h2>Three Simple Steps To Start Working Proccess</h2>
+        <ul>
+          <li>
+            <h4>Research Project</h4>
+            <p>
+              There are many variations of passages of Lorem ipsum dolor sit.
+            </p>
+          </li>
+
+          <li>
+            <h4>Targeting</h4>
+            <p>
+              There are many variations of passages of Lorem ipsum dolor sit.
+            </p>
+          </li>
+
+          <li>
+            <h4>Research Project</h4>
+            <p>
+              There are many variations of passages of Lorem ipsum dolor sit.
+            </p>
+          </li>
+        </ul>
+        <div class="img-wrapper">
+          <img src="/assets//images/main-img.svg" alt="" />
+        </div>
+      </div>
     </main>
+
     <footer>
       <div class="container"></div>
     </footer>
