Felxbox: 12- implement testimonial

--- a/03- CSS Flexbox/12- Sample/code/index.html
+++ b/03- CSS Flexbox/12- Sample/code/index.html
@@ -92,6 +92,67 @@
           <img src="/assets//images/main-img.svg" alt="" />
         </div>
       </div>
+
+      <div class="testimonial">
+        <div class="container">
+          <h2>You are in a good hand</h2>
+          <p>
+            There are many variations of passages of Lorem ipsum dolor sit.
+            There are many variations of passages of Lorem ipsum dolor sit.
+          </p>
+
+          <ul>
+            <li>
+              <div class="tweet">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Consequuntur, culpa.
+                </p>
+                <div>
+                  <span>@alfred</span>
+                  <div class="icons">
+                    <i class="fa fa-retweet">45</i>
+                    <i class="fa fa-heart">10</i>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="tweet">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Maiores ratione rerum repellat? Totam dignissimos asperiores
+                  placeat nemo a!
+                </p>
+                <div>
+                  <span>@youhanscamero</span>
+                  <div class="icons">
+                    <i class="fa fa-retweet">125</i>
+                    <i class="fa fa-heart">70</i>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="tweet">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo,
+                  cumque unde nulla pariatur a explicabo excepturi accusantium
+                  molestias voluptatum ad, qui corrupti porro. Odit quaerat,
+                  tenetur quia accusamus expedita praesentium!
+                </p>
+                <div>
+                  <span>@mirhosseindezfoulian</span>
+                  <div class="icons">
+                    <i class="fa fa-retweet">88</i>
+                    <i class="fa fa-heart">99</i>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <footer>
