Flexbox: 12- implement companies section

--- a/03- CSS Flexbox/12- Sample/code/index.html
+++ b/03- CSS Flexbox/12- Sample/code/index.html
@@ -89,7 +89,7 @@
           </li>
         </ul>
         <div class="img-wrapper">
-          <img src="/assets//images/main-img.svg" alt="" />
+          <img src="/assets/images/main-img.svg" alt="" />
         </div>
       </div>
 
@@ -101,7 +101,7 @@
             There are many variations of passages of Lorem ipsum dolor sit.
           </p>
 
-          <ul>
+          <ul class="tweets">
             <li>
               <div class="tweet">
                 <p>
@@ -149,6 +149,24 @@
                   </div>
                 </div>
               </div>
+            </li>
+          </ul>
+
+          <ul class="companies">
+            <li>
+              <img src="/assets/images/logo-1.svg" alt="" />
+            </li>
+            <li>
+              <img src="/assets/images/logo-2.svg" alt="" />
+            </li>
+            <li>
+              <img src="/assets/images/logo-3.svg" alt="" />
+            </li>
+            <li>
+              <img src="/assets/images/logo-4.svg" alt="" />
+            </li>
+            <li>
+              <img src="/assets/images/logo-5.svg" alt="" />
             </li>
           </ul>
         </div>
