CSS: Update Files

--- a/02- CSS/07- Positions/code/index.html
+++ b/02- CSS/07- Positions/code/index.html
@@ -34,7 +34,7 @@
         <img
           class="artist-img"
           src="/assets/images/homa-rousta.png"
-          alt="Homa Rousta"
+          alt="Artist's Image"
         />
         <span class="artist-name">Homa Rousta</span>
       </div>
