--- a/02- CSS/23- Exercise Rolling KFC/code/index.html
+++ b/02- CSS/23- Exercise Rolling KFC/code/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="square">
-      <img src="/assets/images/kfc.png" class="logo" alt="KFC Logo" />
+      <img src="/assets/images/kfc.png" class="logo" alt="" />
     </div>
   </body>
 </html>
