--- a/02- CSS/24- Like Survey Monkey/code/index.html
+++ b/02- CSS/24- Like Survey Monkey/code/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main>
-      <form action="" method="post">
+      <form>
         <h3>What is your desired job type?</h3>
         <div id="radio-buttons"></div>
       </form>
