--- a/02- CSS/27- Custom Input/code/index.html
+++ b/02- CSS/27- Custom Input/code/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <form action="">
+      <form>
         <input type="text" name="username" id="username" />
         <label for="username">Username</label>
       </form>
