--- a/02- CSS/20- Variables/code/index.html
+++ b/02- CSS/20- Variables/code/index.html
@@ -30,7 +30,7 @@
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
       <div class="container">
-        <img src="/assets/images/isfahan.png" alt="Isfahan" />
+        <img src="/assets/images/isfahan.png" alt="" />
       </div>
     </section>
   </body>
