HTML: Update Files

--- a/01- HTML/07- Links/code/index.html
+++ b/01- HTML/07- Links/code/index.html
@@ -29,7 +29,7 @@
 
     <section id="playground">
       <h2 id="playground-title">Playground</h2>
-      <a href="./assets/images/CodeCademy.png" download>Download Logo</a>
+      <a href="/assets/images/CodeCademy.png" download>Download Logo</a>
       <p>
         Learn To Code
         <a href="https://www.codecademy.com" target="_blank">Codecademy</a>
