--- a/01- HTML/06- Displaying & Styling Text/code/index.html
+++ b/01- HTML/06- Displaying & Styling Text/code/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <main>
-      <h1 id="hero-title">Learning HTML.</h1>
+      <h1 id="hero-title">Learning HTML</h1>
     </main>
 
     <section id="playground">
