--- a/03- CSS Flexbox/10- Calculator/code/index.html
+++ b/03- CSS Flexbox/10- Calculator/code/index.html
@@ -6,56 +6,46 @@
     <title>Calculator</title>
     <link
       rel="shortcut icon"
-      href="./assets/images/favicon.png"
+      href="/assets/images/favicon.png"
       type="image/png"
     />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/index.css" />
-    <link
-      rel="stylesheet"
-      media="screen and (max-width: 768px)"
-      href="./style/tablet.css"
-    />
-    <link
-      rel="stylesheet"
-      media="screen and (max-width: 425px)"
-      href="./style/mobile.css"
-    />
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/index.css" />
+    <script src="/index.js" defer></script>
   </head>
   <body>
-    <div class="wrapper">
+    <main>
       <div class="screen">0</div>
 
       <div class="buttons">
         <div class="row">
-          <button class="btn double">C</button>
-          <button class="btn arrow">&larr;</button>
-          <button class="btn operation">&divide;</button>
+          <button class="button double">C</button>
+          <button class="button arrow">&larr;</button>
+          <button class="button operation">&divide;</button>
         </div>
         <div class="row">
-          <button class="btn">7</button>
-          <button class="btn">8</button>
-          <button class="btn">9</button>
-          <button class="btn operation">&times;</button>
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button operation">&times;</button>
         </div>
         <div class="row">
-          <button class="btn">4</button>
-          <button class="btn">5</button>
-          <button class="btn">6</button>
-          <button class="btn operation">&minus;</button>
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button operation">&minus;</button>
         </div>
         <div class="row">
-          <button class="btn">1</button>
-          <button class="btn">2</button>
-          <button class="btn">3</button>
-          <button class="btn operation">&plus;</button>
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button operation">&plus;</button>
         </div>
         <div class="row">
-          <button class="btn triple">0</button>
-          <button class="btn operation">&equals;</button>
+          <button class="button triple">0</button>
+          <button class="button operation">&equals;</button>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
