--- a/03- CSS Flexbox/11- Like Google/code/index.html
+++ b/03- CSS Flexbox/11- Like Google/code/index.html
@@ -4,54 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/main.css" />
-    <link rel="stylesheet" href="./style/style.css" />
-    <link rel="icon" href="./images/favicon.ico" type="image/ico" />
+    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="icon" href="/images/favicon.ico" type="image/ico" />
     <title>Google</title>
   </head>
-
   <body>
     <header>
       <nav>
         <ul>
           <li>
-            <a href="#"><button>Sign in</button></a>
+            <button>
+              <a href="#">Sign in</a>
+            </button>
           </li>
           <li><a href="#">Gmail</a></li>
           <li><a href="#">Images</a></li>
         </ul>
       </nav>
     </header>
-
     <main>
-      <section>
-        <img src="./images/Logo.png" alt="Google Logo" />
-      </section>
-
-      <section>
-        <form action="">
-          <input type="text" title="Search" />
+      <img src="/images/Logo.png" alt="" />
+      <form>
+        <input type="text" />
+        <div class="actions">
           <input type="submit" value="Google Search" />
           <input type="submit" value="I'm Feeling Lucky" />
-        </form>
-      </section>
+        </div>
+      </form>
     </main>
-
     <footer>
-      <section>
-        <ul>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Settings</a></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Advertising</a></li>
-          <li><a href="#">Business</a></li>
-        </ul>
-      </section>
+      <ul>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Settings</a></li>
+      </ul>
+
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
+      </ul>
     </footer>
   </body>
 </html>
