Flexbox: 11- Change Structure of Files & Folders

--- a/03- CSS Flexbox/11- Like Google/code/index.html
+++ b/03- CSS Flexbox/11- Like Google/code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
     <link rel="stylesheet" href="/style/style.css" />
-    <link rel="icon" href="/images/favicon.ico" type="image/ico" />
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/ico" />
     <title>Google</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-      <img src="/images/Logo.png" alt="" />
+      <img src="/assets/images/Logo.png" alt="" />
       <form>
         <input type="text" />
         <div class="actions">
