Flexbox: 12- Sample, Portfolio Section

--- a/03- CSS Flexbox/12- Sample/code/index.html
+++ b/03- CSS Flexbox/12- Sample/code/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/styles/main.css" />
     <link rel="stylesheet" href="/styles/index.css" />
     <link rel="stylesheet" href="/styles/media.css" />
+    <script src="/scripts/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -171,11 +172,24 @@
           </ul>
         </div>
       </div>
+
+      <div class="container">
+        <span>How To Work</span>
+        <h2>Three Simple Steps To Start Working Proccess</h2>
+
+        <div class="portfolio">
+          <img src="/assets/images/portfolio-1.jpg" alt="" />
+          <img src="/assets/images/portfolio-2.jpg" alt="" />
+          <img src="/assets/images/portfolio-3.jpg" alt="" />
+          <img src="/assets/images/portfolio-4.jpg" alt="" />
+          <img src="/assets/images/portfolio-5.jpg" alt="" />
+          <img src="/assets/images/portfolio-6.jpg" alt="" />
+        </div>
+      </div>
     </main>
 
     <footer>
       <div class="container"></div>
     </footer>
-    <script src="/scripts/index.js"></script>
   </body>
 </html>
