--- a/03- CSS Flexbox/12- Sample/code/index.html
+++ b/03- CSS Flexbox/12- Sample/code/index.html
@@ -189,7 +189,23 @@
     </main>
 
     <footer>
-      <div class="container"></div>
+      <section class="newsletter">
+        <div class="container">
+          <p>Creat a new generation website for your business</p>
+          <form onsubmit="">
+            <input type="email" placeholder="Your Email Address" />
+            <button >
+              <img src="/assets/images/right-arrow.svg" />
+            </button>
+          </form>
+        </div>
+      </section>
+      <div class="container">
+        <section class="copyright">
+          <p>Copyright &copy; 2025</p>
+          <p>Interactive-ART Company, All Rights Reserved</p>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
